# agentic-rag-pdfchat

client/: package-lock.json  package.json
client/src/: App.tsx  index.css
server/: config.py  database.py  docker-compose.yml  main.py  pyproject.toml
server/models/: chat.py
server/routes/: chat_routes.py
server/services/: langchain.py  process_pdf.py
