[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "bson>=0.5.10",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.0",
    "motor>=3.7.0",
    "opensearch-py>=2.8.0",
    "pdf2image>=1.17.0",
    "pinecone-client>=6.0.0",
    "pinecone[grpc]>=6.0.2",
    "pytesseract>=0.3.13",
]
